# rst2revealjs

./: .editorconfig  .gitignore  README.rst  Taskfile.yaml  aqua.yaml  lefthook.yaml  pyproject.toml
.github/workflows/: ci.yaml
e2e/: .gitignore  readme.rst  test_section.py
ide-extensions/vscode/: .gitignore  README.md  Taskfile.yaml  package.json
ide-extensions/vscode/src/: extension.ts
playground/: index.html  package.json
playground/src/: default-settings.toml  editor.ts  main.py  main.ts  rst2revealjs.ts  style.css
playground/src/contexts/: playground.ts
src/rst2revealjs/: cli.py  engine.py  nodes.py  reader.py  transforms.py  writer.py
website/: Taskfile.yaml  biome.json  index.html  package.json  playground.html  template.txt  vite.config.ts
website/src/: default-source.md  default-source.rst  editor.ts  global.d.ts  main.py  main.ts  rst2revealjs.ts
website/src/contexts/: playground.ts
