[project]
name = "rst2revealjs"
version = "0.0.0"
description = "Add your description here"
readme = "README.rst"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.10"
dependencies = [
    "docutils>=0.21.2",
]

[project.scripts]
rst2revealjs = "rst2revealjs.cli:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "doc8>=2.0.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
    { include-group = "test" },
]
test = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pytest>=9.0.2",
]

[tool.doc8]
max-line-length = 119
